# desktop-files-creator

./: .gitignore  Cargo.toml  README.md  meson.build
data/: com.github.cylin577.desktop-files-creator.desktop.in
resources/: window.ui
src/: main.rs  window.rs
